added preview utility

--- a/Testimonials/testimonials.html
+++ b/Testimonials/testimonials.html
@@ -24,7 +24,7 @@
         </div>
       </div>
       <div class="card--review">
-        <p>
+        <p class="preview">
           <b>I received a job offer mid-course, and the subjects I learned
             were current, if not more so, in the company I joined. I honestly
             feel I got every penny's worth.</b>
@@ -50,7 +50,7 @@
         </div>
       </div>
       <div class="card--review">
-        <p>
+        <p class="preview">
           <b>The team was very supportive and kept me motivated.</b>
         </p>
         <p>
@@ -70,7 +70,7 @@
         </div>
       </div>
       <div class="card--review">
-        <p>
+        <p class="preview">
           <b>Such a life-changing experience. Highly recommended!</b>
         </p>
         <p>
@@ -99,7 +99,7 @@
         </div>
       </div>
       <div class="card--review">
-        <p>
+        <p class="preview">
           <b>An overall wonderful and rewarding experience.</b>
         </p>
         <p>
@@ -118,7 +118,7 @@
         </div>
       </div>
       <div class="card--review">
-        <p>
+        <p class="preview">
           <b>Awesome teaching support from TAs who did the bootcamp
             themselves. Getting guidance from them and learning from their
             experiences was easy.</b>
