added quote icon to 1st card

--- a/Testimonials/testimonials.html
+++ b/Testimonials/testimonials.html
@@ -15,7 +15,7 @@
 
 <body>
   <div class="container__grid">
-    <div class="card bg-purple">
+    <div class="card bg-purple bg-quote">
       <div class="card--content">
         <img src="images/image-daniel.jpg" alt="image-daniel.jpg" class="card--img bd-white" />
         <div class="card--profile">
