--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 </head>
 
 <body>
-  <div class="container__grid">
-    <div class="card bg-purple bg-quote">
+  <main class="container__grid">
+    <article class="card bg-purple bg-quote">
       <div class="card--content">
         <img src="images/image-daniel.jpg" alt="image-daniel.jpg" class="card--img bd-white" />
         <div class="card--profile">
@@ -25,23 +25,27 @@
       </div>
       <div class="card--review">
         <p class="preview">
-          <b>I received a job offer mid-course, and the subjects I learned
+          <strong>
+            I received a job offer mid-course, and the subjects I learned
             were current, if not more so, in the company I joined. I honestly
-            feel I got every penny's worth.</b>
+            feel I got every penny's worth.
+          </strong>
         </p>
-        <p>
-          <q>I was an EMT for many years before I joined the bootcamp. I've
+        <blockquote>
+          <p>
+            I was an EMT for many years before I joined the bootcamp. I've
             bene looking to make a transition and have heard some people who
             had an amazing experience here. I signed up for the free intro
             course and found it incredibly fun I enrolled shortly after. The
             next 12 weeks was the best - and most grueling - time of my life.
             Since completing the course, I've successfully switched careers,
-            working as a Software Engineer at a VR startup.</q>
-        </p>
+            working as a Software Engineer at a VR startup.
+          </p>
+        </blockquote>
       </div>
-    </div>
+    </article>
 
-    <div class="card bg-grayish-blue">
+    <article class="card bg-grayish-blue">
       <div class="card--content">
         <img src="images/image-jonathan.jpg" alt="image-jonathan.jpg" class="card--img bd-white" />
         <div class="card--profile">
@@ -51,17 +55,21 @@
       </div>
       <div class="card--review">
         <p class="preview">
-          <b>The team was very supportive and kept me motivated.</b>
+          <strong>
+            The team was very supportive and kept me motivated.
+          </strong>
         </p>
-        <p>
-          <q>I started as a total newbie with virtually no coding skills. I
+        <blockquote>
+          <p>
+            I started as a total newbie with virtually no coding skills. I
             now work as a mobile engineer for a big company. This was one of
-            the best investments I’ve made in myself.</q>
-        </p>
+            the best investments I’ve made in myself.
+          </p>
+        </blockquote>
       </div>
-    </div>
+    </article>
 
-    <div class="card bg-white">
+    <article class="card bg-white">
       <div class="card--content">
         <img src="images/image-kira.jpg" alt="image-kira.jpg" class="card--img bd-grayish-blue" />
         <div class="card--profile">
@@ -71,10 +79,13 @@
       </div>
       <div class="card--review">
         <p class="preview">
-          <b>Such a life-changing experience. Highly recommended!</b>
+          <strong>
+            Such a life-changing experience. Highly recommended!
+          </strong>
         </p>
-        <p>
-          <q>Before joining the bootcamp, I’ve never written a line of code. I
+        <blockquote>
+          <p>
+            Before joining the bootcamp, I’ve never written a line of code. I
             needed some structure from professionals who can help me learn
             programming step by step. I was encouraged to enroll by a former
             student of theirs who can only say wonderful things about the
@@ -85,12 +96,13 @@
             have. In fact, I’ve often referred to it during interviews as an
             example of my developent experience. It certainly helped me land a
             job as a full-stack developer after receiving multiple offers.
-            100% recommend!</q>
-        </p>
+            100% recommend!
+          </p>
+        </blockquote>
       </div>
-    </div>
+    </article>
 
-    <div class="card bg-white">
+    <article class="card bg-white">
       <div class="card--content">
         <img src="images/image-jeanette.jpg" alt="image-jeanette.jpg" class="card--img bd-blackish-blue" />
         <div class="card--profile">
@@ -100,16 +112,20 @@
       </div>
       <div class="card--review">
         <p class="preview">
-          <b>An overall wonderful and rewarding experience.</b>
+          <strong>
+            An overall wonderful and rewarding experience.
+          </strong>
         </p>
-        <p>
-          <q>Thank you for the wonderful experience! I now have a job I really
-            enjoy, and make a good living while doing something I love.</q>
-        </p>
+        <blockquote>
+          <p>
+            Thank you for the wonderful experience! I now have a job I really
+            enjoy, and make a good living while doing something I love.
+          </p>
+        </blockquote>
       </div>
-    </div>
+    </article>
 
-    <div class="card bg-blackish-blue">
+    <article class="card bg-blackish-blue">
       <div class="card--content">
         <img src="images/image-patrick.jpg" alt="image-patrick.jpg" class="card--img bd-purple" />
         <div class="card--profile">
@@ -119,21 +135,25 @@
       </div>
       <div class="card--review">
         <p class="preview">
-          <b>Awesome teaching support from TAs who did the bootcamp
+          <strong>
+            Awesome teaching support from TAs who did the bootcamp
             themselves. Getting guidance from them and learning from their
-            experiences was easy.</b>
+            experiences was easy.
+          </strong>
         </p>
-        <p>
-          <q>The staff seem genuinely concerned about my progress which I find
+        <blockquote>
+          <p>
+            The staff seem genuinely concerned about my progress which I find
             really refreshing. The program gave me the confidence necessary to
             be able to go out in the world and present myself as a capable
             junior developer. The standard is above the rest. You will get the
             personal attention you need from an incredible community of smart
-            and amazing people.</q>
-        </p>
+            and amazing people.
+          </p>
+        </blockquote>
       </div>
-    </div>
-  </div>
+    </article>
+  </main>
 </body>
 
 </html>
