--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             feel I got every penny's worth.
           </strong>
         </p>
-        <blockquote>
+        <blockquote class="blockquote--review">
           <p>
             I was an EMT for many years before I joined the bootcamp. I've
             bene looking to make a transition and have heard some people who
@@ -59,7 +59,7 @@
             The team was very supportive and kept me motivated.
           </strong>
         </p>
-        <blockquote>
+        <blockquote class="blockquote--review">
           <p>
             I started as a total newbie with virtually no coding skills. I
             now work as a mobile engineer for a big company. This was one of
@@ -83,7 +83,7 @@
             Such a life-changing experience. Highly recommended!
           </strong>
         </p>
-        <blockquote>
+        <blockquote class="blockquote--review">
           <p>
             Before joining the bootcamp, I’ve never written a line of code. I
             needed some structure from professionals who can help me learn
@@ -116,7 +116,7 @@
             An overall wonderful and rewarding experience.
           </strong>
         </p>
-        <blockquote>
+        <blockquote class="blockquote--review">
           <p>
             Thank you for the wonderful experience! I now have a job I really
             enjoy, and make a good living while doing something I love.
@@ -141,7 +141,7 @@
             experiences was easy.
           </strong>
         </p>
-        <blockquote>
+        <blockquote class="blockquote--review">
           <p>
             The staff seem genuinely concerned about my progress which I find
             really refreshing. The program gave me the confidence necessary to
